Fixed layout inconsistency. Initially started services page.

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,22 +7,26 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
   scroll-behavior: smooth;
 }
 
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  @apply bg-white-light;
+}
+
 @layer components {
-  .hero-heading {
-    @apply lg:text-5xl md:text-4xl text-3xl font-bold mb-4 text-center tracking-wide;
-  }
-  .hero-subheading {
-    @apply md:text-lg text-sm max-w-2xl m-auto text-center text-gray-500 mb-16;
-  }
-  .hero-padding {
-    @apply py-8 px-4;
-  }
-  .section-padding {
-    @apply py-8 px-4 min-h-[500px];
+  .section-layout {
+    @apply max-w-7xl mx-auto md:px-8 px-4 py-2 overflow-hidden;
   }
 }
